--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "react-scripts": "0.6.1"
   },
   "dependencies": {
+    "chart.js": "^1.1.1",
     "griddle-react": "^0.6.1",
     "react": "^15.3.2",
+    "react-chartjs": "^0.8.0",
     "react-dom": "^15.3.2"
   },
   "scripts": {
