--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chart.js": "^1.1.1",
     "griddle-react": "^0.6.1",
     "jquery": "^3.1.1",
+    "rc-table": "^5.0.3",
     "react": "^15.3.2",
     "react-chartjs": "^0.8.0",
     "react-dom": "^15.3.2",
